Updated resource management section